# HoundMind

./: .editorconfig  .gitignore  CHANGELOG.md  INTEGRATION_COMPLETE.md  README.md  RELEASE.md  ROADMAP.md  actions.py  ai_dream_test.py  ai_exploration_test.py  ai_guard.py  canine_core.py  check_tools.py  companion.py  emotion_detection.py  emotions.py  find_open_space.py  follow_test.py  function_list.py  gesture.py  global_state.py  guard.py  idle_behavior.py  main.py  mapping_test.py  master.py  master_test.py  memory.py  mic_test.py  packmind.py  patrol.py  pet_interaction_test.py  pidog_voice.py  pyproject.toml  pyrightconfig.json  random_action.py  reactions.py  requirements-desktop.txt  requirements-dev.txt  requirements-filtered.txt  (+13 more)
.githooks/: pre-push  pre-push.ps1
.venv311/: pyvenv.cfg
canine_core/: README.md  __init__.py  canine_core_config_guide.md  control.py
config/: actions.jsonc  settings.jsonc
docs/: CANINE_CORE_PACKMIND_FEATURE_MATRIX.md  FEATURES_GUIDE.md  HOUNDMIND_PROGRAMMING_GUIDE.md  INSTALL.md  LOGGING.md  PI3_VALIDATION.md  PIDOG_PROGRAMMING_GUIDE.md  PiDog_Configuration_Guide.txt  PidogGuide.md  QUICK_START_PROGRAMMING.md  ROADMAP.md  api_reference.md  api_reference_enhanced.md  canine_core_config_guide.md  face_recognition_setup.md  listing_pidog_functions.md  packmind_config_guide.md  platform_guide.md  requirements.md  telemetry_quickstart.md  voice_setup_instructions.md
examples/: README.md  houndmind_mapping_demo.py  pidog_programming_examples.py  sound_attention_demo.py  surface_calibration_demo.py
legacy/: README.md  ai_dream.py  ai_exploration.py  ai_guard.py  auto_defense.py  bus.py  companion.py  (+22 more)
(+239 files in other folders)
