[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "houndmind"
version = "2026.01.18"
description = "HoundMind: modular AI framework for SunFounder PiDog (Pi 3 target, vision/voice disabled by default)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
houndmind = "houndmind_ai.main:main"

[tool.setuptools.packages.find]
where = ["src"]
