[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "houndmind"
version = "2026.01.18"
description = "HoundMind: modular AI framework for SunFounder PiDog (Pi 3 target, vision/voice disabled by default)."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = []

[project.optional-dependencies]
# `lite` contains minimal, small dependencies suitable for Pi3 or development without heavy
# vision/ML/audio packages. `full` is the heavy preset for Pi4 that enables vision/audio/SLAM
# and may require system-level build tools and additional libraries on the target device.
lite = ["json5"]
full = ["numpy", "scipy", "opencv-contrib-python", "face_recognition", "SpeechRecognition", "pyaudio", "sounddevice", "rtabmap-py", "flask"]
full = ["numpy", "scipy", "opencv-contrib-python", "face_recognition", "SpeechRecognition", "pyaudio", "sounddevice", "rtabmap-py", "flask", "pyttsx3", "vosk"]
dev = ["ruff", "pytest", "mypy", "pytest-cov"]

[project.scripts]
houndmind = "houndmind_ai.main:main"

[tool.setuptools.packages.find]
where = ["src"]
